# vkvk

./: .gitignore  Cargo.toml  README.md  build.rs  fn_types.rs  rustfmt.toml  shader_build.bat  vk.xml  watch.bat
.cargo/: config.toml
.github/workflows/: rust.yml
examples/: a.rs  a.rs.bak  ex.rs  ex.rs.bak  flag_bits_generator.rs  fn_ty_generator.rs  generator.rs  handle_generator.rs  triangle.rs  xml_parser.rs
generator/: Cargo.toml  vk.xml  watch.bat
generator/src/: aliases.rs  base_types.rs  bitmasks.rs  enumeration_types.rs  enumerations.rs  ext_consts.rs  functions.rs  handle_types.rs  lib.rs  structs_unions.rs  structures.rs  unions.rs  vk_dot_xml_parser.rs  vk_version.rs
src/: api_constants.rs  array_zstr.rs  base_types.rs  device.rs  entry.rs  enumerations.rs  flag_bits.rs  fn_types.rs  handles.rs  instance.rs  lib.rs  macros.rs  physical_device.rs  prelude.rs  structs.rs  version.rs  vk_bool.rs  vk_khr_surface.rs  vk_khr_swapchain.rs  vk_result.rs  vk_version.rs  vk_version_1_0.rs
src/enumerations/: mod.rs  vk_color_space_khr.rs  vk_component_swizzle.rs  vk_format.rs  vk_image_tiling.rs  vk_image_type.rs  vk_image_view_type.rs  vk_present_mode_khr.rs  vk_sharing_mode.rs  vk_structure_type.rs
src/ext/: mod.rs  vk_khr_portability_enumeration.rs  vk_khr_surface.rs  vk_khr_swapchain.rs
src/flag_bits/: mod.rs  vk_image_aspect_flag_bits.rs
src/graphics_pipeline/: color_blend_state_create_info.rs  dynamic_state_create_info.rs  input_assembly_state_create_info.rs  mod.rs  multisample_state_create_info.rs  pipeline_dynamic_state_create_info.rs  pipeline_layout_create_info.rs  pipeline_shader_stage_create_info.rs  rasterization_state_create_info.rs  shader_stage_create_info.rs  vertex_input_state_create_info.rs  viewport_state_create_info.rs
src/structs/: mod.rs  vk_component_mapping.rs  (+4 more)
tests/: correct_enum_vals.rs
(+8 files in other folders)
