[package]
name = "vkvk"
description = "A vulkan library."
repository = "https://github.com/Lokathor/vkvk"
version = "0.1.0+vk1.3.241"
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"

[dev-dependencies]
beryllium = "0.9.2"

[features]
default = ["VK_KHR_surface", "VK_KHR_swapchain"]
VK_KHR_surface = []
VK_KHR_swapchain = ["VK_KHR_surface"]
