[package]
name = "vkvk"
description = "A vulkan library."
repository = "https://github.com/Lokathor/vkvk"
version = "0.1.0+vk1.3.242"
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"

[dev-dependencies]
beryllium = "0.10.0"

[dependencies]
raw-window-handle = "0.5.0"
raw_vulkan_handle = "0.1.1"
zstring = "0.2.1"
bool32 = "0.1.0"
