[package]
name = "vkvk_generator"
description = "Code generator for Vulkan stuff"
repository = "https://github.com/Lokathor/vkvk"
version = "0.0.0"
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"

publish = false

[dependencies]
convert_case = "0.6.0"
magnesium = "1.3"
vk_dot_xml_parser = "0.2.1"

[profile.dev.package."*"]
opt-level = 3
